@@ -39,10 +39,7 @@ public class ProblemCaseMemorySettings {
         }
 
         this.size = size;
-
-        this.initialValues = initialValues != null
-            ? Collections.unmodifiableMap(initialValues)
-            : Collections.emptyMap();
+        this.initialValues = initialValues != null ? Map.copyOf(initialValues) : Collections.emptyMap();
     }
 
     /**
